--- a/src/styles/pages/other.scss
+++ b/src/styles/pages/other.scss
@@ -41,7 +41,7 @@
     }
     .skills {
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       gap: 5px;
       font-size: 13px;
       padding: 15px 0;
